refactor: Rename fields and variables for improved clarity and consistency in PII summary and reporting
- Updated field names like `nbOfDetectedPIIBySeverity` to more descriptive alternatives such as `ScanReportingSummary` and `summary`.
- Fixed typos in comments and arguments (e.g., `quCeued` -> `queued`).
- Refined test display names and variable usages for better readability and correctness.